--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <title>Password Generator</title>
 </head>
 <body>
+    <div class="generator">
+        <h1>Password Generator</h1>
+        <h3 id="password">password</h3>
+        <form id="form">
+            <label for="characterAmountNumber">Number of Characters</label>
+            <div class="character-container">
+                <input type="range" min="1" max="50" value="10" id="characterAmountRange">
+                <input type="number" min="1" max="50" value="10" id="characterAmountNumber">
+            </div>
 
+            <label for="uppercase">Include Uppercase</label>
+            <input type="checkbox" id="uppercase">
+
+            <label for="numbers">Include Numbers</label>
+            <input type="checkbox" id="numbers">
+
+            <label for="symbols">Include Symbols</label>
+            <input type="checkbox" id="symbols">
+
+            <button id="submit" type="submit">Generate Password</button>
+        </form>
+    </div>
 </body>
 </html>
